[tool.poetry]
name = "spring_cloud"
version = "0.1.0"
description = ""
authors = ["spring-cloud-in-python-contributor"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.7"
wrapt = "^1.12.1"

[tool.poetry.dev-dependencies]
pre-commit = "^2.7.1"
pytest = "^6.1.2"
pytest-cov = "^2.10.1"
pytest-mock = "^3.3.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
